updated the swagger docs
